--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@
 
     color: #fff;
 
+    width: 100%;
+
+
  }
 
  /* Typeography General*/
@@ -231,7 +234,11 @@
 
     padding: 1em;
 
-    text-align: left;
+    text-align: center;
+
+
+
+
 
  }
 
@@ -243,6 +250,8 @@
 
         padding: 4em;
 
+
+
     }
 
  }
@@ -253,7 +262,7 @@
 
     margin-left: auto;
 
-    text-align: right;
+    text-align: center;
 
  }
 
